311025/Q3/apache-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: bitnami/apache:latest
          ports:
            - containerPort: 8080
