311025/Q3/apache-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
spec:
  selector:
    app: apache
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
